Adding the cloud run for 10x the number of iterations. Results in better function approximation but is incredibly expensive to evaluate. Still worth having though. Moving on to Logistic Regression now.

--- a/Code/Branin-Hoo/Branin-Hoo_Visualizations.Rmd
+++ b/Code/Branin-Hoo/Branin-Hoo_Visualizations.Rmd
@@ -10,7 +10,7 @@ library(ggplot2)
 ```
 
 ```{r}
-results <- scan(file = "Branin-Hoo_Results_BASS.txt")
+results <- scan(file = "Branin-Hoo_Results_BASS_100k.txt")
 results <- matrix(results, ncol = 100, byrow = TRUE)
 
 Group <- 1:100
