Worked on chapter 1. Progress in the markov chains part.

--- a/Tesis_Escrito/TeX_files/Bibliography.bib
+++ b/Tesis_Escrito/TeX_files/Bibliography.bib
@@ -60,3 +60,18 @@
 	year = {2005},
 	file = {Hohendorff and Rosenthal - 2005 - An introduction to markov chain monte carlo.pdf:/Users/saintcloud/Zotero/storage/CE5HBBBG/Hohendorff and Rosenthal - 2005 - An introduction to markov chain monte carlo.pdf:application/pdf},
 }
+
+
+@book{chung_markov_1960,
+	address = {Berlin},
+	title = {Markov chains with stationary transition probabilities},
+	isbn = {978-3-642-49686-8},
+	abstract = {"This book presupposes no knowledge of Markov chains but it does assume the elements of general probability theory as given in a modern introductory course."--Preface},
+	language = {eng},
+	publisher = {Springer},
+	author = {Chung, Kai Lai},
+	year = {1960},
+	note = {OCLC: 682058891},
+	file = {Chung - 1960 - Markov chains with stationary transition probabili.pdf:/Users/saintcloud/Zotero/storage/JGK45P3N/Chung - 1960 - Markov chains with stationary transition probabili.pdf:application/pdf},
+}
+
