--- a/Tesis_Escrito/main.tex
+++ b/Tesis_Escrito/main.tex
@@ -3,10 +3,13 @@
 \usepackage{graphicx}
 \usepackage{amsthm}
 \usepackage{amsfonts}
+\usepackage{amsmath}
 
 \begin{document}
 	
 \newtheorem{definition}{Definition}
+\newtheorem{theorem}{Theorem}
+\newtheorem{lemma}{Lemma}
 
 \author{Adrian TJ}
 \title{BASS as a Surrogate Model for Bayesian Optimization}
