Added a small intro to kernel functions that I had not written down before. Think its a good addition.

--- a/Tesis_Escrito/TeX_files/Bibliography.bib
+++ b/Tesis_Escrito/TeX_files/Bibliography.bib
@@ -75,3 +75,9 @@
 	file = {Chung - 1960 - Markov chains with stationary transition probabili.pdf:/Users/saintcloud/Zotero/storage/JGK45P3N/Chung - 1960 - Markov chains with stationary transition probabili.pdf:application/pdf},
 }
 
+@inproceedings{ghahramani2011tutorial,
+	title={A Tutorial on Gaussian Processes (or why I don’t use SVMs)},
+	author={Ghahramani, Zoubin},
+	booktitle={Proc. MLSS Workshop Talk Gaussian Processes},
+	year={2011}
+}
