Finished uploading chapter 1.

--- a/Tesis_Escrito/TeX_files/Bibliography.bib
+++ b/Tesis_Escrito/TeX_files/Bibliography.bib
@@ -81,3 +81,11 @@
 	booktitle={Proc. MLSS Workshop Talk Gaussian Processes},
 	year={2011}
 }
+
+@book{garnett_bayesoptbook_2023,
+	author    = {Garnett, Roman},
+	title     = {{Bayesian Optimization}},
+	year      = {2023},
+	publisher = {Cambridge University Press},
+	note      = {to appear}
+}
